feat(salad): Added salad state and basoc features

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,36 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
-  </button>
+  <mat-toolbar-row>
+    <button
+      mat-icon-button
+      class="example-icon"
+      aria-label="Example icon-button with menu icon"
+    >
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>Salad Bar</span>
+    <span class="example-spacer"></span>
+    <button
+      mat-icon-button
+      class="example-icon favorite-icon"
+      aria-label="Example icon-button with heart icon"
+    >
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button
+      mat-icon-button
+      routerLink="kitchen"
+      aria-label="Example icon-button with share icon"
+    >
+      <mat-icon>kitchen</mat-icon>
+    </button>
+  </mat-toolbar-row>
+  <mat-toolbar-row>
+    <span *ngIf="name$ | async as name">Hello, {{ name }}.</span>
+    <span class="example-spacer"></span>
+    <span *ngIf="orderId$ | async as orderId"
+      >Your order ID : {{ orderId }}</span
+    >
+  </mat-toolbar-row>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
